# STM32_template_proj

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32_NUCLEO_F103_LL_project_LCD.ioc
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  nt_LCD_1602.c  nt_LCD_1602.h  nt_debounce.c  nt_debounce.h  nt_encoder.c  nt_encoder.h  nt_gpio.c  nt_gpio.h  nt_pins.h  nt_system_init.c  nt_system_init.h  nt_time.c  nt_time.h  nt_time_utils.c  nt_time_utils.h  nt_usart.c  nt_usart.h  stm32f1xx_it.c  system_stm32f1xx.c
Core/Startup/: startup_stm32f103rbtx.s
Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f103xb.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_ll_bus.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_ll_rcc.c  stm32f1xx_ll_utils.c
lwbtn/: CMakeLists.txt  library.cmake
lwbtn/src/include/: lwbtn.h
lwbtn/src/lwbtn/: lwbtn.c
